[package]
name = "grandpa-light-client"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <david.salami@gmail.com>"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
#subxt-codegen = { git = "https://github.com/paritytech/subxt", rev = "ec23283d75e4b3b894294e351fd7ffa2b4431201" }
#jsonrpsee = { version = "0.15.0", features = ["async-client", "client-ws-transport", "http-client"] }
#frame-metadata = { version = "15.0.0", features = ["v14", "std"] }
#syn = "1.0.98"
#codec = { package = "parity-scale-codec", version = "3.0.0" }
#color-eyre = "0.6.2"
#hex = "0.4.3"
#tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
anyhow = { version = "1.0.64", default-features = false }
finality-grandpa = { version = "0.16.0", features = ["derive-codec"], default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

[dev-dependencies]
#subxt = { git = "https://github.com/paritytech/subxt", rev = "c55b7ba3e34118f61dc51499a0b38262c513aec4" }
#futures = "0.3.24"
#hex = "0.4.3"
#serde = "1.0.144"
#polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
#tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
#finality-grandpa-rpc = { package = "sc-finality-grandpa-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
#hex-literal = "0.3.4"

[features]
default = ["std"]
std = [
    "codec/std",
    "anyhow/std",
    "finality-grandpa/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-trie/std",
    "sp-finality-grandpa/std",
    "sp-state-machine/std",
    "sp-core/std",
]