[package]
name = "grandpa-light-client-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
beefy-primitives = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }


[features]
default = ["std"]
std = [
    "sp-core/std",
    "beefy-primitives/std"
]