[package]
name = "grandpa-light-client-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.64", default-features = false }

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
finality-grandpa = { version = "0.16.0", features = ["derive-codec"], default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

derive_more = { version = "0.99.17", default-features = false, features = ["display"] }


[features]
default = ["std"]
std = [
    "sp-core/std",
    "finality-grandpa/std",
    "codec/std",
    "sp-runtime/std",
    "sp-finality-grandpa/std",
    "anyhow/std",
    "sp-std/std",
    "sp-trie/std",
]