[package]
name = "hyperspace-core"
version = "0.1.0"
edition = "2021"
description = "Hyperspace core exports the relayer and fisherman tasks, and a Cli interface for common tasks."
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <david.salami@gmail.com>"]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }
parachain = { path = "../parachain", package = "hyperspace-parachain", optional = true }
cosmos = { path = "../cosmos", package = "hyperspace-cosmos", optional = true }
#near = { path = "near", package = "hyperspace-near", optional = true }
metrics = { path = "../metrics", package = "hyperspace-metrics" }

# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
log = "0.4.17"
env_logger = "0.9.0"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "fs"] }
codec = { version = "3.0.0", package = "parity-scale-codec" }
clap = { version = "3.2.22", features = ["derive"] }
toml = "0.5.9"
serde = "1.0.144"
thiserror = "1.0.31"
derive_more = { version = "0.99.17", features = ["from"] }
prometheus = { version = "0.13.0", default-features = false }

# ibc
ibc = { path = "../../ibc/modules", features = [] }
ibc-proto = { path = "../../ibc/proto" }
ibc-rpc = { path = "../../contracts/pallet-ibc/rpc" }
tendermint-proto = { git = "https://github.com/farhad-shabani/tendermint-rs", rev= "ab7db0fa89e1634ad9855bc567ba02d9e8916426" }

light-client-common = { path = "../../light-clients/common" }
pallet-ibc = { path = "../../contracts/pallet-ibc" }
ics07-tendermint = { path = "../../light-clients/ics07-tendermint", optional = true }
ics10-grandpa = { path = "../../light-clients/ics10-grandpa", optional = true }
ics11-beefy = { path = "../../light-clients/ics11-beefy", optional = true }
# ics13-near = { path = "../light-clients/ics13-near" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
subxt = { git = "https://github.com/paritytech/subxt", rev = "1736f618d940a69ab212a686984c3be25b08d1c2" }

[dev-dependencies]
derive_more = "0.99.17"
prost = "0.10"
parachain = { path = "../parachain", package = "hyperspace-parachain", features = ["testing"] }
cosmos = { path = "../cosmos", package = "hyperspace-cosmos", features = ["testing"] }

# substrate
subxt = { git = "https://github.com/paritytech/subxt", rev = "1736f618d940a69ab212a686984c3be25b08d1c2" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
state-machine = { package = "sp-state-machine", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# composable
#comosable-primitives = { package = "primitives",  path = "../contracts/pallet-ibc" }
#common = { path = "../contracts/pallet-ibc" }

[features]
build-metadata-from-ws = [
    "parachain/build-metadata-from-ws",
]
parachain = ["dep:parachain", "ics10-grandpa", "ics11-beefy"]
cosmos = ["dep:cosmos", "ics07-tendermint"]
#near = ["dep:near"]
testing = [ "primitives/testing", "parachain/testing" ]