[package]
name = "hyperspace-core"
version = "0.1.0"
edition = "2021"
description = "Hyperspace core exports the relayer and fisherman tasks, and a Cli interface for common tasks."
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }
parachain = { path = "../parachain", package = "hyperspace-parachain" }
cosmos = { path = "../cosmos", package = "hyperspace-cosmos", optional = true }
#near = { path = "near", package = "hyperspace-near", optional = true }
metrics = { path = "../metrics", package = "hyperspace-metrics" }

# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
log = "0.4.17"
env_logger = "0.9.0"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "fs"] }
codec = { version = "3.0.0", package = "parity-scale-codec" }
clap = { version = "3.2.22", features = ["derive"] }
toml = "0.5.9"
serde = "1.0.144"
thiserror = "1.0.31"
derive_more = { version = "0.99.17", features = ["from"] }
prometheus = { version = "0.13.0", default-features = false }

# ibc
ibc = { path = "../../ibc/modules", features = [] }
ibc-proto = { path = "../../ibc/proto" }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
ibc-rpc = { path = "../../contracts/pallet-ibc/rpc" }

ics11-beefy = { path = "../../light-clients/ics11-beefy" }
#ics13-near = { path = "../../light-clients/ics13-near" }
ics08-wasm = { path = "../../light-clients/ics08-wasm", features = ["std"] }
light-client-common = { path = "../../light-clients/common" }
pallet-ibc = { path = "../../contracts/pallet-ibc" }
ics10-grandpa = { path = "../../light-clients/ics10-grandpa" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
subxt = { git = "https://github.com/paritytech/subxt",  rev = "d92352ad739836a4100e1ef1db607acc82ed8c5a", features = ["substrate-compat"] }
prost = { version = "0.11", default-features = false }

[dev-dependencies]
derive_more = "0.99.17"
prost = "0.11"
parachain = { path = "../parachain", package = "hyperspace-parachain", features = ["testing"] }
cosmos = { path = "../cosmos", package = "hyperspace-cosmos", features = ["testing"] }

# substrate
subxt = { git = "https://github.com/paritytech/subxt",  rev = "d92352ad739836a4100e1ef1db607acc82ed8c5a", features = ["substrate-compat"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
state-machine = { package = "sp-state-machine", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
build-metadata-from-ws = [
    "parachain/build-metadata-from-ws",
]
#near = ["dep:near"]
cosmos = ["dep:cosmos"]
testing = [
    "primitives/testing",
    "parachain/testing",
    "cosmos/testing",
]
default = ["cosmos"]
dali = ["parachain/dali"]