[package]
name = "hyperspace-core"
version = "0.1.0"
edition = "2021"
description = "Hyperspace core exports the relayer and fisherman tasks, and a Cli interface for common tasks."
authors = [
    "Seun Lanlege <seunlanlege@gmail.com>",
    "David Salami <wizdave97@gmail.com>",
]

[build-dependencies]
anyhow = { workspace = true }
once_cell = "1.16.0"
subxt-codegen = { package = "codegen", path = "../../utils/subxt/codegen" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-udeps.ignore]
normal = ["scale-encode"]


[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }
parachain = { path = "../parachain", package = "hyperspace-parachain" }
cosmos = { path = "../cosmos", package = "hyperspace-cosmos", optional = true }
#near = { path = "near", package = "hyperspace-near", optional = true }
metrics = { path = "../metrics", package = "hyperspace-metrics" }

# crates.io
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
tokio  = { workspace = true }
parity-scale-codec = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
scale-encode = { workspace = true }

# ibc
ibc = { workspace = true, features = [] }
ibc-proto = { workspace = true }
tendermint-proto = { workspace = true }
ibc-rpc = { workspace = true }

ics11-beefy = { workspace = true }
#ics13-near = { workspace = true }
ics08-wasm = { workspace = true }
light-client-common = { workspace = true }
pallet-ibc = { workspace = true }
pallet-ibc-ping = { workspace = true }
ics10-grandpa = { workspace = true }
sp-runtime = { workspace = true }
sp-keystore = { workspace = true }
sp-core = { workspace = true }
sp-consensus-beefy = { workspace = true }
subxt = { workspace = true }
subxt-generated = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
derive_more = "0.99.17"
prost = "0.11"
parachain = { path = "../parachain", package = "hyperspace-parachain", features = [
    "testing",
] }
cosmos = { path = "../cosmos", package = "hyperspace-cosmos", features = [
    "testing",
] }

# substrate
subxt = { workspace = true }
frame-support = { workspace = true }
sp-trie = { workspace = true }
sp-state-machine = { workspace = true }
sp-keyring = { workspace = true }

[features]
build-metadata-from-ws = []
#near = ["dep:near"]
cosmos = ["dep:cosmos"]
testing = ["primitives/testing", "parachain/testing", "cosmos/testing"]
default = ["cosmos"]
composable-beefy = []
