[package]
name = "hyperspace-cosmos"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }

# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
log = "0.4.17"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["macros", "sync"] }
rs_merkle = "1.2.0"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
hex-literal = "0.3.4"
serde_json = "1.0.74"
derive_more = { version = "0.99", features = ["from"]  }
serde = {version="1.0.137", features = ["derive"]}
tokio-stream = { version = "0.1.9", features = ["sync"]}
thiserror = "1.0.31"
itertools = "0.10.3"
prost = { version = "0.11" }
k256 = { version = "0.11.6", features = ["ecdsa-core", "ecdsa", "sha256"] }
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
bech32 = "0.9.1"
bip32 = "0.4.0"
ed25519-zebra = { version = "3.1.0" }
tiny-bip39 = "1.0.0"
sha2 = "0.10.6"
ripemd = "0.1.3"
digest = "0.10.6"
# composable
ibc = { path = "../../ibc/modules", features = [] }
ibc-proto = { path = "../../ibc/proto" }
ibc-primitives = { path = "../../contracts/pallet-ibc/primitives" }
ics07-tendermint = { path = "../../light-clients/ics07-tendermint" }
ics08-wasm = { path = "../../light-clients/ics08-wasm" }
ibc-rpc = { path = "../../contracts/pallet-ibc/rpc" }
pallet-ibc = { path = "../../contracts/pallet-ibc" }

tracing = "0.1.36"

# tendermint
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false, features = [
    "secp256k1",
] }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
tendermint-rpc = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false, features = [
    "http-client",
    "websocket-client",
] }
tendermint-light-client = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false, features = [
    "rpc-client",
    "secp256k1",
    "unstable",
#    "testing"
] }
tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }


[features]
testing = [
    "primitives/testing"
]