[package]
name = "hyperspace-cosmos"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }

# crates.io
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
tokio = { version = "1.32.0", features = ["macros", "sync"] }
rs_merkle = { workspace = true }
parity-scale-codec = { workspace = true }
serde_json = { workspace = true }
derive_more = { version = "0.99", features = ["from"]  }
serde = { workspace = true }
tokio-stream = { version = "0.1.14", features = ["sync"]}
thiserror = { workspace = true }
itertools = "0.10.3"
prost = { version = "0.11" }
k256 = { version = "0.11.6", features = ["ecdsa-core", "ecdsa", "sha256"] }
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
bech32 = "0.9.1"
bip32 = "0.4.0"
ed25519-zebra = { version = "3.1.0" }
tiny-bip39 = "1.0.0"
sha2 = "0.10.6"
ripemd = "0.1.3"
digest = "0.10.6"
quick_cache = "0.3.0"
rand = { workspace = true }

# composable
ibc = { workspace = true, features = [] }
ibc-proto = { workspace = true }
ibc-primitives = { path = "../../contracts/pallet-ibc/primitives" }
ics07-tendermint = { path = "../../light-clients/ics07-tendermint" }
ics08-wasm = { path = "../../light-clients/ics08-wasm" }
ibc-rpc = { workspace = true }
pallet-ibc = { workspace = true }

tracing = "0.1.36"

# tendermint
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false, features = [
    "secp256k1",
] }
tendermint-proto = { workspace = true }
tendermint-rpc = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false, features = [
    "http-client",
    "websocket-client",
] }
tendermint-light-client = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false, features = [
    "rpc-client",
    "secp256k1",
    "unstable",
#    "testing"
] }
tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }

[features]
testing = [
    "primitives/testing"
]
