[package]
name = "hyperspace-cosmos"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }

# crates.io
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
rs_merkle = { workspace = true }
parity-scale-codec = { workspace = true }
serde_json = { workspace = true }
derive_more = { version = "0.99", features = ["from"]  }
serde = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"]}
thiserror = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
k256 = { workspace = true }
tonic = { workspace = true }
bech32 = { workspace = true }
bip32 = { workspace = true }
ed25519-zebra = { workspace = true }
tiny-bip39 = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
digest = { workspace = true }
quick_cache = { workspace = true }
rand = { workspace = true }

# composable
ibc = { workspace = true, features = [] }
ibc-proto = { workspace = true }
ibc-primitives = { workspace = true }
ics07-tendermint = { workspace = true }
ics08-wasm = { workspace = true }
ibc-rpc = { workspace = true }
pallet-ibc = { workspace = true }

tracing = "0.1.36"

# tendermint
tendermint = { workspace = true, default-features = false, features = ["secp256k1"] }
tendermint-proto = { workspace = true }
tendermint-rpc = { workspace = true, default-features = false, features = [
    "http-client",
    "websocket-client",
] }
tendermint-light-client = { workspace = true, default-features = false, features = [
    "rpc-client",
    "secp256k1",
    "unstable",
#    "testing"
] }
tendermint-light-client-verifier = { workspace = true, default-features = false }

[features]
testing = [
    "primitives/testing"
]
