[package]
name = "hyperspace-ethereum"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives", features = [
    "testing",
] }

# composable
ibc = { path = "../../ibc/modules", features = [] }
ibc-primitives = { path = "../../contracts/pallet-ibc/primitives" }
ibc-proto = { path = "../../ibc/proto" }
ibc-rpc = { path = "../../contracts/pallet-ibc/rpc" }
ics07-tendermint = { path = "../../light-clients/ics07-tendermint" }
icsxx-ethereum = { path = "../../light-clients/icsxx-ethereum" }
pallet-ibc = { path = "../../contracts/pallet-ibc" }
hyperspace-cosmos = { path = "../cosmos" }

sync-committee-primitives = { git = "https://github.com/polytope-labs/sync-committee-rs.git", rev = "106f53e045cc85c4a8d984c8e295800cebaa2475" }
sync-committee-verifier = { git = "https://github.com/polytope-labs/sync-committee-rs.git", rev = "106f53e045cc85c4a8d984c8e295800cebaa2475" }
sync-committee-prover = { git = "https://github.com/polytope-labs/sync-committee-rs.git", rev = "106f53e045cc85c4a8d984c8e295800cebaa2475" }
#light-client-common = { path = "../common"  }
ssz-rs = { git = "https://github.com/polytope-labs/ssz-rs", branch = "main" }

cast = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }

anyhow = "1.0.65"
async-stream = "0.3.5"
async-trait = "0.1.53"
elliptic-curve = { features = ["pem"], version = "0.13.5" }
ethers = { version = "2.0.2", features = ["ws"] }
ethers-solc = "2.0.8"
ethers-providers = "2.0.8"
jsonwebtoken = "8.3.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
prost = "0.11"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.36"
tracing-subscriber = "0.3.17"
env_logger = "0.10.0"
once_cell = "1.18.0"
ecdsa = "0.16.7"
log = "0.4.20"
reqwest = "0.11.18"
clap = { version = "4.4.2", features = ["derive"] }
strum = "0.25.0"
itertools = "0.11.0"

redis = "0.22"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }

[dev-dependencies]
toml = "0.7.3"
git2 = "0.17.1"
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }

[features]
default = ["testnet"]
testnet = [
    "sync-committee-primitives/testnet",
    "sync-committee-verifier/testnet",
    "sync-committee-prover/testnet",
]