[package]
name = "hyperspace-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.19", default-features = false, features = ["io"] }
hyper = { version = "0.14.16", default-features = false, features = ["http1", "server", "tcp"] }
log = "0.4.17"
prometheus = { version = "0.13.0", default-features = false }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["parking_lot"] }
anyhow = "1.0.65"

# ibc
ibc = { git = "https://github.com/ComposableFi/centauri.git", rev = "83d7cffce6032cc12ac44fd718798069dd966c45" }
ibc-proto = { git = "https://github.com/ComposableFi/centauri.git", rev = "83d7cffce6032cc12ac44fd718798069dd966c45" }
tendermint-proto = { git = "https://github.com/composableFi/tendermint-rs", rev = "2c513dcaf2385d5b5f55e129a5ed11cc8d8ad5d0", default-features = false }
