[package]
name = "hyperspace-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.19", default-features = false, features = ["io"] }
hyper = { version = "0.14.16", default-features = false, features = ["http1", "server", "tcp"] }
log = { workspace = true }
prometheus = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.32.0", features = ["parking_lot"] }
anyhow = { workspace = true }

# ibc
ibc = { path = "../../ibc/modules" }
ibc-proto = { workspace = true }
tendermint-proto = { workspace = true }
