[package]
name = "hyperspace-near"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }

# crates.io
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
rs_merkle = { workspace = true }
parity-scale-codec = { workspace = true }
hex-literal = { workspace = true }
serde_json = { workspace = true }
derive_more = { version = "0.99", features = ["from"]  }
serde = { workspace = true, features = ["derive"]}
tokio-stream = { workspace = true, features = ["sync"]}
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["async-client", "jsonrpsee-client-transport", "client-ws-transport", "http-client"] }
openssl-probe = "0.1.2"

# substrate
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-keystore = "0.12.0"

# ibc
ibc = { workspace = true, features = [] }
ibc-proto = { workspace = true }
tendermint-proto = { workspace = true }

# near
near-crypto = "0.14.0"
near-primitives = "0.14.0"
near-sdk = { git = "https://github.com/ComposableFi/near-sdk-rs", branch = "master" }
near-lite-client = { git = "https://github.com/ComposableFi/near-rs.git", branch = "main" }
near-lite-relayer = { git = "https://github.com/ComposableFi/near-rs.git", branch = "main" }
near-merkle-proofs = { git = "https://github.com/ComposableFi/near-rs.git", branch = "main" }
near-jsonrpc-client = "0.4.0-beta.0"
near-jsonrpc-primitives = "0.14.0"
near-indexer = { git = "https://github.com/composableFi/nearcore" }

[features]
testing = []
