[package]
name = "hyperspace-parachain"
version = "0.1.0"
edition = "2021"
description = "Hyperspace relayer interface for Parachains"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[build-dependencies]
anyhow = "1.0.65"
once_cell = "1.16.0"
subxt-codegen = { package = "codegen", path = "../../utils/subxt/codegen" }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives", features = ["testing"] }

# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
log = "0.4.17"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["macros", "sync"] }
rs_merkle = "1.2.0"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
hex-literal = "0.3.4"
serde_json = "1.0.74"
derive_more = { version = "0.99", features = ["from"]  }
serde = {version="1.0.137", features = ["derive"]}
tokio-stream = { version = "0.1.9", features = ["sync"]}
thiserror = "1.0.31"
itertools = "0.10.3"
jsonrpsee = "0.16.2"
jsonrpsee-ws-client = "0.16.2"
finality-grandpa = "0.16.0"
prost = { version = "0.11" }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", features = ["full_crypto"] }
ss58-registry = "1.28.0"
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# subxt
subxt = { git = "https://github.com/paritytech/subxt",  rev = "d92352ad739836a4100e1ef1db607acc82ed8c5a", features = ["substrate-compat"] }
subxt-generated = { path = "../../utils/subxt/generated" }

beefy-primitives = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", package = "sp-beefy" }
beefy-mmr = { package = "pallet-beefy-mmr", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-mmr = { package = "pallet-mmr", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
transaction-payment-rpc = { package = "pallet-transaction-payment-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
transaction-payment-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# composable
ibc = { path = "../../ibc/modules", features = [] }
ibc-proto = { path = "../../ibc/proto" }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
light-client-common = { path = "../../light-clients/common" }
ibc-rpc = { path = "../../contracts/pallet-ibc/rpc" }
pallet-ibc = { path = "../../contracts/pallet-ibc" }
ibc-primitives = { path = "../../contracts/pallet-ibc/primitives" }

# Beefy
beefy-prover = { path = "../../algorithms/beefy/prover" }
beefy-light-client = { path = "../../algorithms/beefy/verifier" }
beefy-light-client-primitives = {  path = "../../algorithms/beefy/primitives" }
ics11-beefy = { path = "../../light-clients/ics11-beefy" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# Grandpa
grandpa-prover = { path = "../../algorithms/grandpa/prover" }
grandpa-light-client-primitives = { path = "../../algorithms/grandpa/primitives" }
ics10-grandpa = { path = "../../light-clients/ics10-grandpa" }
finality-grandpa-rpc = { package = "sc-finality-grandpa-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[dev-dependencies]
derive_more = "0.99.17"
clap = {version = "3.2.0", features = ["derive"]}
state-machine = { package = "sp-state-machine", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
prost = "0.11"
primitives = { path = "../primitives", package = "hyperspace-primitives", features = ["testing"] }
subxt-generated = { path = "../../utils/subxt/generated" }

[features]
default = ["std"]
build-metadata-from-ws = [
    "grandpa-prover/build-metadata-from-ws",
    "beefy-prover/build-metadata-from-ws",
]
dali = []
testing = ["primitives/testing"]
std = [
    "sp-io/std",
    "frame-support/std"
]