[package]
name = "hyperspace-parachain"
version = "0.1.0"
edition = "2021"
description = "Hyperspace relayer interface for Parachains"
authors = [
	"Seun Lanlege <seunlanlege@gmail.com>",
	"David Salami <wizdave97@gmail.com>",
]

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives", features = [
	"testing",
] }

# crates.io
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
tokio = { version = "1.32.0", features = ["macros", "sync"] }
rs_merkle = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
hex-literal = "0.3.4"
serde_json = { workspace = true }
derive_more = { version = "0.99", features = ["from"] }
serde = { workspace = true }
tokio-stream = { version = "0.1.9", features = ["sync"] }
thiserror = { workspace = true }
itertools = "0.10.3"
jsonrpsee = "0.16.2"
jsonrpsee-ws-client = "0.16.2"
finality-grandpa = "0.16.0"
prost = { version = "0.11" }
rand = { workspace = true }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", features = [
	"full_crypto",
] }
ss58-registry = "1.28.0"
sp-runtime = { workspace = true }

# subxt
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.29.0", features = [
	"substrate-compat",
] }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", package = "sp-consensus-beefy" }
pallet-beefy-mmr = { workspace = true }
pallet-mmr = { package = "pallet-mmr", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-mmr-primitives = { workspace = true }
frame-support = { workspace = true }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-trie = { workspace = true }
frame-system = { workspace = true }
transaction-payment-rpc = { package = "pallet-transaction-payment-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
transaction-payment-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-keystore = { workspace = true }

# composable
ibc = { workspace = true, features = [] }
ibc-proto = { workspace = true }
tendermint-proto = { workspace = true }
light-client-common = { workspace = true }
ibc-rpc = { workspace = true }
pallet-ibc = { workspace = true }
pallet-ibc-ping = { workspace = true }
ibc-primitives = { path = "../../contracts/pallet-ibc/primitives" }

# Beefy
beefy-prover = { workspace = true }
beefy-light-client = { workspace = true }
beefy-light-client-primitives = { workspace = true }
ics11-beefy = { workspace = true }
sc-consensus-beefy-rpc = { workspace = true }

# Grandpa
grandpa-prover = { workspace = true }
grandpa-light-client-primitives = { workspace = true }
ics10-grandpa = { workspace = true }
finality-grandpa-rpc = { package = "sc-consensus-grandpa-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

[dev-dependencies]
derive_more = "0.99.17"
clap = { version = "3.2.0", features = ["derive"] }
sp-state-machine = { workspace = true }
prost = "0.11"
primitives = { path = "../primitives", package = "hyperspace-primitives", features = [
	"testing",
] }
subxt-generated = { workspace = true }

[features]
default = ["std"]
testing = ["primitives/testing"]
std = [
	"sp-io/std",
	"frame-support/std",
	"anyhow/std",
	"beefy-light-client/std",
	"beefy-light-client-primitives/std",
	"clap/std",
	"finality-grandpa/std",
	"frame-system/std",
	"futures/std",
	"grandpa-light-client-primitives/std",
	"hex/std",
	"ibc/std",
	"ibc-primitives/std",
	"ibc-proto/std",
	"ics10-grandpa/std",
	"ics11-beefy/std",
	"light-client-common/std",
	"log/std",
	"pallet-beefy-mmr/std",
	"pallet-ibc/std",
	"pallet-ibc-ping/std",
	"pallet-mmr/std",
	"transaction-payment-runtime-api/std",
	"parity-scale-codec/std",
	"polkadot-core-primitives/std",
	"prost/std",
	"rand/std",
	"rs_merkle/std",
	"serde/std",
	"serde_json/std",
	"sp-authority-discovery/std",
	"beefy-primitives/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-keystore/std",
	"sp-mmr-primitives/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-trie/std",
	"ss58-registry/std",
]
